@@ -13,73 +13,77 @@ int32_t SPVM__Sys__Time__Timespec__new(SPVM_ENV* env, SPVM_VALUE* stack) {
 
   int32_t error_id = 0;
   
-  struct timespec* st_tv = env->new_memory_block(env, stack, sizeof(struct timespec));
+  struct timespec* ts = env->new_memory_block(env, stack, sizeof(struct timespec));
   
-  void* obj_tv = env->new_pointer_object_by_name(env, stack, "Sys::Time::Timespec", st_tv, &error_id, __func__, FILE_NAME, __LINE__);
+  ts->tv_sec = stack[0].lval;
+  
+  ts->tv_nsec = stack[1].lval;
+  
+  void* obj_ts = env->new_pointer_object_by_name(env, stack, "Sys::Time::Timespec", ts, &error_id, __func__, FILE_NAME, __LINE__);
   if (error_id) { return error_id; }
-
-  stack[0].oval = obj_tv;
+  
+  stack[0].oval = obj_ts;
   
   return 0;
 }
 
 int32_t SPVM__Sys__Time__Timespec__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  void* obj_tv = stack[0].oval;
+  void* obj_ts = stack[0].oval;
   
-  struct timespec* st_tv = env->get_pointer(env, stack, obj_tv);
+  struct timespec* ts = env->get_pointer(env, stack, obj_ts);
   
-  assert(st_tv);
+  assert(ts);
   
-  env->free_memory_block(env, stack, st_tv);
+  env->free_memory_block(env, stack, ts);
   
   return 0;
 }
 
 int32_t SPVM__Sys__Time__Timespec__tv_sec(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  void* obj_tv = stack[0].oval;
+  void* obj_ts = stack[0].oval;
   
-  struct timespec* st_tv = env->get_pointer(env, stack, obj_tv);
+  struct timespec* ts = env->get_pointer(env, stack, obj_ts);
   
-  stack[0].lval = st_tv->tv_sec;
+  stack[0].lval = ts->tv_sec;
   
   return 0;
 }
 
 int32_t SPVM__Sys__Time__Timespec__set_tv_sec(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  void* obj_tv = stack[0].oval;
+  void* obj_ts = stack[0].oval;
   
   int64_t tv_sec = stack[1].lval;
   
-  struct timespec* st_tv = env->get_pointer(env, stack, obj_tv);
+  struct timespec* ts = env->get_pointer(env, stack, obj_ts);
   
-  st_tv->tv_sec = tv_sec;
+  ts->tv_sec = tv_sec;
   
   return 0;
 }
 
 int32_t SPVM__Sys__Time__Timespec__tv_nsec(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  void* obj_tv = stack[0].oval;
+  void* obj_ts = stack[0].oval;
   
-  struct timespec* st_tv = env->get_pointer(env, stack, obj_tv);
+  struct timespec* ts = env->get_pointer(env, stack, obj_ts);
   
-  stack[0].lval = st_tv->tv_nsec;
+  stack[0].lval = ts->tv_nsec;
   
   return 0;
 }
 
 int32_t SPVM__Sys__Time__Timespec__set_tv_nsec(SPVM_ENV* env, SPVM_VALUE* stack) {
   
-  void* obj_tv = stack[0].oval;
+  void* obj_ts = stack[0].oval;
   
   int64_t tv_nsec = stack[1].lval;
   
-  struct timespec* st_tv = env->get_pointer(env, stack, obj_tv);
+  struct timespec* ts = env->get_pointer(env, stack, obj_ts);
   
-  st_tv->tv_nsec = tv_nsec;
+  ts->tv_nsec = tv_nsec;
   
   return 0;
 }
