@@ -28,7 +28,7 @@ The Sys::Time::Timeval class of L<SPVM> represents L<struct timeval|https://linu
 
 =head2 new
 
-C<static method new : L<Sys::Time::Timeval|SPVM::Sys::Time::Timeval> ($tv_sec : long = 0, $tv_usec : long = 0)>
+C<static method new : L<Sys::Time::Timeval|SPVM::Sys::Time::Timeval> ($tv_sec : long = 0, $tv_usec : long = 0);>
 
 Creates a new C<Sys::Time::Timeval> object.
 
@@ -36,25 +36,25 @@ Creates a new C<Sys::Time::Timeval> object.
 
 =head2 tv_sec
 
-C<method tv_sec : long ()>
+C<method tv_sec : long ();>
 
 Gets C<tv_sec>.
 
 =head2 set_tv_sec
 
-C<method set_tv_sec : void ($tv_sec : long)>
+C<method set_tv_sec : void ($tv_sec : long);>
 
 Sets C<tv_sec>.
 
 =head2 tv_usec
   
-C<method tv_usec : long ()>
+C<method tv_usec : long ();>
 
 Gets C<tv_usec>.
 
 =head2 set_tv_usec
 
-C<method set_tv_usec : void ($tv_usec : long)>
+C<method set_tv_usec : void ($tv_usec : long);>
 
 Sets C<tv_usec>.
 
