@@ -6,6 +6,7 @@
     * The kill method in the Sys class can be used in Windows if $pid is equal to the current process id.
     * Add the utimes method to the Sys::IO class.
     * Add the optional $tv_sec and $tv_usec arguments to the new method in the Sys::Time::Timeval.
+    * Add the optional $tv_sec and $tv_nsec arguments to the new method in the Sys::Time::Timespec.
   [Incompatible Changes]
     * Remove the Sys::FileTest class.
     * Remove throwing exceptions in the ualarm method in the Sys::Signal class.
